src/test/ui/issues/issue-pr29383.stderr
error[E0532]: expected tuple struct or tuple variant, found unit variant `E::A`
  --> $DIR/issue-pr29383.rs:9:14
   |
LL |         Some(E::A(..)) => {}
   |              ^^^^ not a tuple struct or tuple variant

error[E0532]: expected tuple struct or tuple variant, found unit variant `E::B`
  --> $DIR/issue-pr29383.rs:11:14
   |
LL |         Some(E::B(..)) => {}
   |              ^^^^ not a tuple struct or tuple variant

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
